--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital care</title>
-    <!-- <link href="./output.css" rel="stylesheet">  -->
          <script src="https://cdn.tailwindcss.com/3.3.3"></script> 
 </head>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -25,41 +24,116 @@
 </script>
 
 <body class="h-screen">
-    <header class="bg-white sticky top-0 shadow-md">
-        <div class="container mx-auto px-2 py-4">
-             <div class="flex items-center justify-between gap-5 text-semibold">
-                <!-- logo -->
-               <a href="#" class="text-xl text-primary font-semibold">
-                Hospital Care
-                </a>
+ <!-- Header / Navbar -->
+<header class="bg-white sticky top-0 z-50 shadow-lg">
+  <div class="container mx-auto px-6 py-4">
+    <div class="flex items-center justify-between">
 
-               <!-- nav-bar -->
-               <nav class="sm:flex items-center gap-4 hidden">
-                   <a href="#" class="text-shadow-gray-900  font-semibold  md:text-md  hover:text-orange-400 transition duration-300">Home</a>
-                   <a href="#" class="text-shadow-gray-900  font-semibold  md:text-md  hover:text-orange-400 transition duration-300">Services</a>
-                  <a href="#" class="text-shadow-gray-900 font-semibold   md:text-md  hover:text-orange-400 transition duration-300">About us</a>
-                   <a href="#" class="text-shadow-gray-900  font-semibold  md:text-md   hover:text-orange-400 transition duration-300">Doctors</a>
-             </nav>
-             <!-- icons -->
-              <div class="flex items-center gap-3 text-lg ">
-                <button class="hover:text-orange-400 text-gray-700">
-                    <i class="fa-solid fa-user"></i>
-                </button>
-                <button class="hover:text-orange-400 text-gray-700 ">
-                    <i class="fas fa-moon"></i>
-                </button> 
-                <button class="hover:text-orange-400 md:hidden text-gray-700 ">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-              </div>
+      <!-- Logo -->
+      <a href="#" class="flex items-center gap-2 text-xl font-bold text-primary">
+        <span class="text-orange-400"><img src="asset/images/logo.jpeg" class="h-10 w-5 object-cover"></span> Hospital Care
+      </a>
+
+      <!-- Navigation -->
+      <nav class="hidden md:flex items-center gap-8 font-semibold text-gray-700">
+        <a href="#" class="hover:text-orange-400 transition">Home</a>
+        <a href="#" class="hover:text-orange-400 transition">Services</a>
+        <a href="#" class="hover:text-orange-400 transition">About Us</a>
+        <a href="#" class="hover:text-orange-400 transition">Doctors</a>
+        <a href="#" class="hover:text-orange-400 transition">Departments</a>
+      </nav>
+
+      <!-- Right Actions -->
+      <div class="flex items-center gap-4">
+        <!-- User -->
+        <button class="text-gray-600 hover:text-orange-400 transition">
+          <i class="fa-regular fa-user"></i>
+        </button>
+
+        <!-- Dark Mode -->
+        <button class="text-gray-600 hover:text-orange-400 transition">
+          <i class="fa-regular fa-moon"></i>
+        </button>
+
+        <!-- Appointment Button -->
+        <a href="#" class="hidden sm:flex items-center gap-2 px-4 py-2 bg-primary text-white rounded-full hover:bg-orange-400 transition">
+          <i class="fa-regular fa-calendar-days"></i>
+          Appointment
+        </a>
+
+        <!-- Mobile Menu -->
+        <button class="md:hidden text-gray-600 hover:text-orange-400 transition text-xl">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </div>
+
+    </div>
+  </div>
+</header>
+  <!-- Hero Section -->
+<section class="bg-secondary">
+  <div class="container mx-auto px-6 lg:px-10 py-16">
+    <div class="grid grid-cols-1 lg:grid-cols-2 items-center gap-12">
+
+      <!-- Text Content -->
+      <div>
+        <h1 class="text-4xl lg:text-5xl font-bold text-primary leading-tight">
+          Get the Care you <br />Need & Faster.
+        </h1>
+        <p class="mt-5 text-gray-600 max-w-xl">
+          Discover the heart behind our mental health platform. At our core,
+          we are a compassionate community of experts dedicated to guiding.
+        </p>
+
+        <!-- Features -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mt-6">
+          <p class="text-gray-700 flex items-center">
+            <i class="fa-solid fa-check text-orange-400 mr-2"></i>
+            A world of comprehensive care
+          </p>
+          <p class="text-gray-700 flex items-center">
+            <i class="fa-solid fa-check text-orange-400 mr-2"></i>
+            Warm & welcoming environment
+          </p>
+          <p class="text-gray-700 flex items-center">
+            <i class="fa-solid fa-check text-orange-400 mr-2"></i>
+            Patient‑centered care
+          </p>
+          <p class="text-gray-700 flex items-center">
+            <i class="fa-solid fa-check text-orange-400 mr-2"></i>
+            Cutting‑edge technology
+          </p>
         </div>
-    </header>
-    
 
-    <!-- hero section -->
-    <section class="h-full bg-secondary">
-<H3>hero section</H3>
-    </section>
+        <!-- CTA -->
+        <div class="flex flex-col sm:flex-row sm:items-center gap-6 mt-8">
+          <button class="px-6 py-3 bg-orange-400 hover:bg-orange-500 text-white font-semibold rounded-lg">
+            Appointment
+          </button>
+          <div>
+            <p class="text-sm text-gray-500">Emergency Number</p>
+            <p class="text-lg font-semibold text-gray-700">+1‑938‑740‑7555</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Image -->
+      <div class="relative">
+        <div class="absolute inset-0 bg-white rounded-3xl -z-10"></div>
+        <img
+          src="asset/images/hero.avif"
+          alt="Doctor consulting patient"
+          class="w-full max-h-[520px] object-cover rounded-3xl"
+        />
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+
+    
     <!-- feature section -->
      <section class="h-full">
         <h3>feature section</h3>
