edited in login & register page

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospital Management System – Login / Register</title>
+    <title>HospitalCare – Login / Register</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 font-sans">
@@ -16,7 +16,7 @@
         <div
           class="hidden md:flex flex-col justify-center bg-indigo-600 text-white p-10"
         >
-          <h2 class="text-3xl font-bold mb-4">Hospital Management System</h2>
+          <h2 class="text-3xl font-bold mb-4">HospitalCare</h2>
           <p class="text-indigo-100 mb-6">
             Manage Admin, Doctor, Patient & Receptionist modules from one secure
             platform.
