Doctors, Receptionists, Patients, Departments, Billing & Finance, Reports page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -15,49 +15,40 @@
         <div class="p-6 text-2xl font-bold text-indigo-600">HospitalCare</div>
         <nav class="flex-1 px-4 space-y-2">
           <a
-            href="#"
+            href="admin.html"
             class="flex items-center gap-3 p-3 rounded-lg bg-indigo-50 text-indigo-600 font-medium"
             >Dashboard</a
           >
+
           <a
-            href="#"
-            class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
-            >Admins</a
-          >
-          <a
-            href="#"
+            href="doctors.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Doctors</a
           >
           <a
-            href="#"
+            href="receptionists.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Receptionists</a
           >
           <a
-            href="#"
+            href="patients.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Patients</a
           >
           <a
-            href="#"
+            href="departments.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Departments</a
           >
           <a
-            href="#"
+            href="billing.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Billing & Finance</a
           >
           <a
-            href="#"
+            href="reports.html"
             class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
             >Reports</a
-          >
-          <a
-            href="#"
-            class="flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
-            >System Settings</a
           >
         </nav>
         <div class="p-4 border-t">
