index page 95%complete with login register some fixes are require still

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
           <!-- Right Actions -->
           <div class="flex items-center gap-4">
             <!-- User -->
-            <button class="text-gray-600 hover:text-orange-400 duration-300">
+            <a
+              href="login.html"
+              class="text-gray-600 hover:text-orange-400 duration-300"
+            >
               <i class="fa-regular fa-user"></i>
-            </button>
+            </a>
 
             <!-- Dark Mode -->
             <button class="text-gray-600 hover:text-orange-400 duration-300">
@@ -342,7 +345,8 @@
       </div>
     </section>
 
-    <section class="py-12 bg-gray-50">
+    <!-- request section -->
+    <section class="py-8 bg-gray-50">
       <div class="container mx-auto px-5 text-center">
         <!-- Section Header -->
         <p class="text-sm text-orange-400 font-semibold">Our Services</p>
@@ -361,7 +365,7 @@
               <i class="fa-solid fa-user-doctor"></i>
             </div>
             <h3 class="font-semibold text-gray-900 mb-2">
-              Medicine & Nephrology
+              Medicine & Nephorology
             </h3>
             <p class="text-gray-600 text-sm mb-3">
               25+ Doctors are available under this department who serve.
@@ -391,7 +395,6 @@
               Read More <i class="fa-solid fa-arrow-right"></i>
             </a>
           </div>
-
           <div
             class="bg-red-100 rounded-xl p-6 hover:shadow-lg transition cursor-pointer"
           >
@@ -435,6 +438,292 @@
           >
             More Services <i class="fa-solid fa-arrow-right"></i>
           </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-[#f5fbfd] py-4">
+      <div class="max-w-7xl mx-auto px-5">
+        <!-- Heading -->
+        <div class="text-center mb-10">
+          <p class="text-sm text-orange-500 font-semibold">Our Doctors</p>
+          <h2 class="text-3xl font-bold text-gray-800 mt-2">
+            Our Experts <span class="text-teal-600">Our Doctors</span> For
+            <br />The Patients
+          </h2>
+        </div>
+
+        <!-- Tabs -->
+        <div
+          class="flex flex-wrap justify-center gap-6 mb-12 text-sm font-medium"
+        >
+          <button class="text-orange-500 border-b-2 border-orange-500 pb-1">
+            Orthopaedics
+          </button>
+          <button class="text-gray-500 hover:text-orange-500">Dental</button>
+          <button class="text-gray-500 hover:text-orange-500">Medicine</button>
+          <button class="text-gray-500 hover:text-orange-500">
+            Liver Surgeon
+          </button>
+          <button class="text-gray-500 hover:text-orange-500">
+            Child Specialist
+          </button>
+          <button class="text-gray-500 hover:text-orange-500">Others</button>
+        </div>
+
+        <!-- Doctors Grid -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Card -->
+          <div class="bg-white rounded-2xl shadow-sm p-4 text-center">
+            <img
+              src="https://i.pravatar.cc/300?img=12"
+              class="rounded-xl mb-4"
+              alt="Doctor"
+            />
+            <h4 class="font-semibold text-gray-800">Dr. Arvinda Arjun Shek</h4>
+            <p class="text-xs text-gray-500 mt-1">MBBS, DNB, DTCD, PhD</p>
+            <div class="flex justify-between text-xs mt-4 px-2">
+              <a href="#" class="text-teal-600 font-medium">Availability</a>
+              <a href="#" class="text-orange-500 font-medium">Book Today</a>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <div class="bg-white rounded-2xl shadow-sm p-4 text-center">
+            <img
+              src="https://i.pravatar.cc/300?img=32"
+              class="rounded-xl mb-4"
+              alt="Doctor"
+            />
+            <h4 class="font-semibold text-gray-800">Dr. Scott Graham</h4>
+            <p class="text-xs text-gray-500 mt-1">MBBS, DMD, PhD</p>
+            <div class="flex justify-between text-xs mt-4 px-2">
+              <a href="#" class="text-teal-600 font-medium">Availability</a>
+              <a href="#" class="text-orange-500 font-medium">Book Today</a>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <div class="bg-white rounded-2xl shadow-sm p-4 text-center">
+            <img
+              src="https://i.pravatar.cc/300?img=45"
+              class="rounded-xl mb-4"
+              alt="Doctor"
+            />
+            <h4 class="font-semibold text-gray-800">Dr. Brenton Ottinger</h4>
+            <p class="text-xs text-gray-500 mt-1">MBBS, MD, FRCP</p>
+            <div class="flex justify-between text-xs mt-4 px-2">
+              <a href="#" class="text-teal-600 font-medium">Availability</a>
+              <a href="#" class="text-orange-500 font-medium">Book Today</a>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <div class="bg-white rounded-2xl shadow-sm p-4 text-center">
+            <img
+              src="https://i.pravatar.cc/300?img=64"
+              class="rounded-xl mb-4"
+              alt="Doctor"
+            />
+            <h4 class="font-semibold text-gray-800">Dr. Arvinda Arjun Shek</h4>
+            <p class="text-xs text-gray-500 mt-1">MBBS, DNB, DTCD</p>
+            <div class="flex justify-between text-xs mt-4 px-2">
+              <a href="#" class="text-teal-600 font-medium">Availability</a>
+              <a href="#" class="text-orange-500 font-medium">Book Today</a>
+            </div>
+          </div>
+        </div>
+
+        <!--  Button -->
+        <div class="text-center mt-12">
+          <button
+            class="bg-orange-500 hover:bg-orange-600 text-white px-6 py-2 rounded-full text-sm font-medium"
+          >
+            More Doctors →
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-[#f5fbfd] py-14">
+      <div class="max-w-7xl mx-auto px-5">
+        <div
+          class="grid md:grid-cols-2 gap-10 items-center bg-white rounded-3xl p-10 shadow-sm"
+        >
+          <!-- Left -->
+          <div>
+            <p class="text-orange-500 font-semibold text-sm mb-2">
+              Make Appointment
+            </p>
+            <h2 class="text-3xl font-bold text-gray-800 mb-4">
+              Request Your Appointment
+            </h2>
+            <p class="text-gray-500 mb-6">
+              Our medical center is committed to delivering exceptional
+              healthcare services tailored to meet the needs of every patient.
+            </p>
+
+            <div class="flex gap-4">
+              <button
+                class="bg-orange-500 hover:bg-orange-600 text-white px-6 py-3 rounded-full text-sm font-medium"
+              >
+                Make An Appointment →
+              </button>
+              <button
+                class="flex items-center gap-2 text-teal-700 font-medium text-sm"
+              >
+                <span
+                  class="w-10 h-10 flex items-center justify-center rounded-full bg-teal-100"
+                >
+                  ▶
+                </span>
+                How it Works
+              </button>
+            </div>
+          </div>
+
+          <!-- Right -->
+          <div>
+            <img
+              src="https://images.unsplash.com/photo-1580281657521-7a1b1a72d6c4"
+              class="rounded-2xl"
+              alt="Appointment"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="bg-[#f5fbfd] py-10">
+      <div class="max-w-7xl mx-auto px-5">
+        <!-- Heading -->
+        <div class="text-center mb-14">
+          <p class="text-orange-500 text-sm font-semibold">Testimonial</p>
+          <h2 class="text-3xl font-bold text-gray-800 mt-2">
+            Our patients’
+            <span class="text-teal-600">experiences speak</span> for themselves
+          </h2>
+        </div>
+
+        <!-- Cards -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Card -->
+          <div class="bg-white p-6 rounded-2xl shadow-sm">
+            <span class="text-orange-400 text-4xl">“</span>
+            <p class="text-sm text-gray-500 mt-2">
+              Your smile is in great hands! Our dedicated team of dental
+              professionals is committed to providing exceptional care.
+            </p>
+
+            <div class="flex items-center gap-3 mt-6">
+              <img src="https://i.pravatar.cc/40?img=5" class="rounded-full" />
+              <div>
+                <h5 class="text-sm font-semibold text-gray-800">
+                  Arefin Shubo Mujib
+                </h5>
+                <p class="text-xs text-gray-400">CEO & Founder</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Repeat -->
+          <div class="bg-white p-6 rounded-2xl shadow-sm">
+            <span class="text-orange-400 text-4xl">“</span>
+            <p class="text-sm text-gray-500 mt-2">
+              Exceptional service and caring doctors. Highly recommended for
+              everyone.
+            </p>
+
+            <div class="flex items-center gap-3 mt-6">
+              <img src="https://i.pravatar.cc/40?img=11" class="rounded-full" />
+              <div>
+                <h5 class="text-sm font-semibold text-gray-800">
+                  Robert Carlos Anjun
+                </h5>
+                <p class="text-xs text-gray-400">Architect Engineer</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-white p-6 rounded-2xl shadow-sm">
+            <span class="text-orange-400 text-4xl">“</span>
+            <p class="text-sm text-gray-500 mt-2">
+              Professional and friendly environment. The doctors really care.
+            </p>
+
+            <div class="flex items-center gap-3 mt-6">
+              <img src="https://i.pravatar.cc/40?img=15" class="rounded-full" />
+              <div>
+                <h5 class="text-sm font-semibold text-gray-800">
+                  Dr. Scott Graham
+                </h5>
+                <p class="text-xs text-gray-400">MBBS, DMD</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-white p-6 rounded-2xl shadow-sm">
+            <span class="text-orange-400 text-4xl">“</span>
+            <p class="text-sm text-gray-500 mt-2">
+              Truly outstanding healthcare service from start to finish.
+            </p>
+
+            <div class="flex items-center gap-3 mt-6">
+              <img src="https://i.pravatar.cc/40?img=20" class="rounded-full" />
+              <div>
+                <h5 class="text-sm font-semibold text-gray-800">
+                  Dr. Brenton Ottinger
+                </h5>
+                <p class="text-xs text-gray-400">MD, FRCP</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="bg-gradient-to-r from-[#0f766e] to-[#134e4a] text-white pt-14"
+    >
+      <div class="max-w-7xl mx-auto px-5">
+        <!-- Top Info -->
+        <div class="grid md:grid-cols-3 gap-6 mb-14">
+          <div class="bg-white text-gray-800 rounded-xl p-6">
+            <h4 class="font-semibold mb-2">Doctors Timetable</h4>
+            <p class="text-sm text-gray-500 mb-3">
+              View doctors availability and book your appointment.
+            </p>
+            <a href="#" class="text-orange-500 text-sm font-medium">
+              View Timetable →
+            </a>
+          </div>
+
+          <div class="bg-white text-gray-800 rounded-xl p-6">
+            <h4 class="font-semibold mb-2">Our Benefits</h4>
+            <ul class="text-sm text-gray-500 space-y-2">
+              <li>✔ World class treatment</li>
+              <li>✔ Save time & money</li>
+              <li>✔ Feel like home services</li>
+            </ul>
+          </div>
+
+          <div class="bg-white text-gray-800 rounded-xl p-6">
+            <h4 class="font-semibold mb-2">Working Hours</h4>
+            <p class="text-sm text-gray-500">Monday – Friday: 08:00 - 18:00</p>
+            <p class="text-sm text-gray-500">Sunday: Closed</p>
+          </div>
+        </div>
+
+        <!-- Footer Bottom -->
+        <div
+          class="border-t border-white/20 py-6 flex flex-col md:flex-row justify-between text-sm"
+        >
+          <p>© Hospital Automanager. All Rights Reserved.</p>
+          <div class="flex gap-4">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+          </div>
         </div>
       </div>
     </section>
