Add Doctr page, Add receptionist page, Add Department page and some edits in UI of table

--- a/admin/doctors.html
+++ b/admin/doctors.html
@@ -88,12 +88,12 @@
           </div>
         </div>
 
-        <!-- Main -->
-        <main class="flex-1 p-6">
+        
+        <div class="flex-1 p-6">
           <div class="flex justify-between items-center mb-6">
-            
+            <h2 class="text-2xl font-semibold">Doctors</h2>
             <button class="bg-indigo-600 text-white px-5 py-2 rounded-full">
-              + Add Doctor
+               <a href="addDoctor.html">+ Add Doctor</a>
             </button>
           </div>
 
@@ -101,18 +101,26 @@
             <table class="w-full text-sm">
               <thead class="bg-gray-50 text-gray-500">
                 <tr>
+                  <th class="p-4 text-left">S.no.</th>
                   <th class="p-4 text-left">Name</th>
                   <th class="p-4 text-left">Department</th>
                   <th class="p-4 text-left">Phone</th>
+                  <th class="p-4 text-left">Email</th>
+                  <th class="p-4 text-left">Gender</th>
+                  <th class="p-4 text-left">Qualification</th>
                   <th class="p-4 text-left">Status</th>
                   <th class="p-4 text-left">Action</th>
                 </tr>
               </thead>
               <tbody>
                 <tr class="border-t">
+                  <td class="p-4">1</td>
                   <td class="p-4">Dr. Anil Shrestha</td>
                   <td class="p-4">Cardiology</td>
                   <td class="p-4">9800000001</td>
+                  <td class="p-4">anil@gmail.com</td>
+                  <td class="p-4">Male</td>
+                  <td class="p-4">MBBS, MD(Cardiology)</td>
                   <td class="p-4">
                     <span
                       class="bg-green-100 text-green-600 px-3 py-1 rounded-full"
