Table element edit on depatement page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -98,9 +98,11 @@
             </p>
           </div>
           <div class="flex gap-3 mt-4 md:mt-0">
-            <button class="bg-black px-6 py-2 rounded-full">Add Doctor</button>
+            <button class="bg-black px-6 py-2 rounded-full">
+              <a href="addDoctor.html">+ Add Doctor</a>
+            </button>
             <button class="bg-white text-black px-6 py-2 rounded-full">
-              Add User
+              <a href="addReceptionist.html">+ Add Receptionist </a>
             </button>
           </div>
         </div>
