--- a/admin/departments.html
+++ b/admin/departments.html
@@ -100,6 +100,7 @@
       <table class="w-full text-sm">
         <thead class="bg-gray-50 text-gray-500">
           <tr>
+            <th class="p-4 text-left">S.no.</th>
             <th class="p-4 text-left">Department Name</th>
             
             <th class="p-4 text-left">Status</th>
@@ -107,6 +108,7 @@
         </thead>
         <tbody>
           <tr class="border-t">
+            <td class="p-4">1</td>
             <td class="p-4">Cardiology</td>
             
             <td class="p-4">
