--- a/admin/billing.html
+++ b/admin/billing.html
@@ -88,8 +88,8 @@
           </div>
         </div>
 
-        <!-- Main -->
-         <main class="flex-1 p-6">
+
+         <div class="flex-1 p-6">
     <h2 class="text-2xl font-semibold mb-6">Billing & Finance</h2>
 
     <!-- Summary Cards -->
