--- a/admin/reports.html
+++ b/admin/reports.html
@@ -88,8 +88,8 @@
           </div>
         </div>
 
-        <!-- Main -->
-        <main class="flex-1 p-6">
+     
+        <div class="flex-1 p-6">
     <h2 class="text-2xl font-semibold mb-6">Reports</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
